--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1106,6 +1106,198 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 536\t output Three = 133\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 536\t output Three = 133\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 534\t output Three = 133\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 539\t output Three = 134\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 541\t output Three = 134\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 544\t output Three = 135\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 546\t output Three = 136\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 542\t output Three = 135\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 546\t output Three = 136\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 552\t output Three = 137\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 550\t output Three = 137\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 538\t output Three = 134\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 271\t output Three = 67\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 0\t output Three = 0\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 9\t output Three = 2\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n",
+      "sensor Three = 393\t output Three = 97\n",
+      "\n",
+      "sensor One= 0\t output One= 0\n",
+      "\n",
+      "sensor Two = 0\t output Two = 0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import serial\n",
+    "import time\n",
+    "\n",
+    "# make sure the 'COM#' is set according the Windows Device Manager\n",
+    "ser = serial.Serial('/dev/cu.usbserial-01937934', 9800, timeout=1)\n",
+    "time.sleep(2)\n",
+    "\n",
+    "for i in range(50):\n",
+    "    line = ser.readline()   # read a byte\n",
+    "    if line:\n",
+    "        string = line.decode()  # convert the byte string to a unicode string\n",
+    "        print(string)\n",
+    "\n",
+    "ser.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 48] Address already in use",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-52238942f962>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# Bind and listen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mserverSocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"127.0.0.1\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9090\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mserverSocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlisten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 48] Address already in use"
+     ]
+    }
+   ],
+   "source": [
+    "#----- A simple TCP based server program in Python using send() function -----\n",
+    "\n",
+    " \n",
+    "\n",
+    "import socket\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Create a stream based socket(i.e, a TCP socket)\n",
+    "\n",
+    "# operating on IPv4 addressing scheme\n",
+    "\n",
+    "serverSocket = socket.socket(socket.AF_INET, socket.SOCK_STREAM);\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Bind and listen\n",
+    "\n",
+    "serverSocket.bind((\"127.0.0.1\",9090));\n",
+    "\n",
+    "serverSocket.listen();\n",
+    "\n",
+    " \n",
+    "\n",
+    "# Accept connections\n",
+    "\n",
+    "while(True):\n",
+    "\n",
+    "    (clientConnected, clientAddress) = serverSocket.accept();\n",
+    "\n",
+    "    print(\"Accepted a connection request from %s:%s\"%(clientAddress[0], clientAddress[1]));\n",
+    "\n",
+    "   \n",
+    "\n",
+    "    dataFromClient = clientConnected.recv(1024)\n",
+    "\n",
+    "    print(dataFromClient.decode());\n",
+    "\n",
+    " \n",
+    "\n",
+    "    # Send some data back to the client\n",
+    "\n",
+    "    clientConnected.send(\"Hello Client!\".encode());"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
