--- a/branching.ipynb
+++ b/branching.ipynb
@@ -437,611 +437,611 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n",
-      "4\n",
-      "----\n",
-      "20\n",
-      "4\n",
-      "----\n",
-      "20\n",
-      "3\n",
-      "----\n",
-      "19\n",
-      "3\n",
-      "----\n",
-      "19\n",
+      "40\n",
       "5\n",
       "----\n",
-      "19\n",
+      "39\n",
       "7\n",
       "----\n",
-      "17\n",
-      "8\n",
-      "----\n",
-      "17\n",
-      "9\n",
-      "----\n",
-      "16\n",
-      "10\n",
-      "----\n",
-      "16\n",
-      "9\n",
-      "----\n",
-      "15\n",
-      "8\n",
-      "----\n",
-      "14\n",
-      "10\n",
-      "----\n",
-      "14\n",
-      "10\n",
-      "----\n",
-      "13\n",
-      "12\n",
-      "----\n",
-      "12\n",
-      "10\n",
-      "----\n",
-      "12\n",
-      "11\n",
-      "----\n",
-      "12\n",
-      "13\n",
-      "----\n",
-      "12\n",
-      "15\n",
-      "----\n",
-      "11\n",
-      "16\n",
-      "----\n",
-      "10\n",
-      "15\n",
-      "----\n",
-      "10\n",
-      "16\n",
-      "----\n",
-      "10\n",
-      "15\n",
-      "----\n",
-      "10\n",
-      "14\n",
-      "----\n",
-      "9\n",
-      "13\n",
-      "----\n",
-      "9\n",
-      "13\n",
-      "----\n",
-      "8\n",
-      "12\n",
-      "----\n",
-      "8\n",
-      "14\n",
-      "----\n",
-      "8\n",
-      "14\n",
-      "----\n",
-      "8\n",
-      "15\n",
-      "----\n",
-      "7\n",
-      "16\n",
-      "----\n",
-      "7\n",
-      "16\n",
-      "----\n",
-      "5\n",
-      "16\n",
-      "----\n",
-      "5\n",
-      "13\n",
-      "----\n",
-      "5\n",
-      "14\n",
-      "----\n",
-      "5\n",
-      "16\n",
-      "----\n",
-      "5\n",
-      "15\n",
-      "----\n",
-      "5\n",
-      "15\n",
-      "----\n",
-      "5\n",
-      "13\n",
-      "----\n",
-      "5\n",
-      "11\n",
-      "----\n",
-      "5\n",
-      "10\n",
-      "----\n",
-      "5\n",
-      "12\n",
-      "----\n",
-      "5\n",
-      "14\n",
-      "----\n",
-      "5\n",
-      "15\n",
-      "----\n",
-      "5\n",
-      "14\n",
-      "----\n",
-      "5\n",
-      "15\n",
-      "----\n",
-      "5\n",
-      "14\n",
-      "----\n",
-      "5\n",
-      "14\n",
-      "----\n",
-      "4\n",
-      "11\n",
-      "----\n",
-      "4\n",
-      "12\n",
-      "----\n",
-      "4\n",
-      "12\n",
-      "----\n",
-      "4\n",
-      "12\n",
-      "----\n",
-      "4\n",
-      "12\n",
-      "----\n",
-      "4\n",
-      "10\n",
-      "----\n",
-      "4\n",
-      "8\n",
-      "----\n",
-      "4\n",
-      "9\n",
-      "----\n",
-      "4\n",
-      "10\n",
-      "----\n",
-      "4\n",
-      "10\n",
-      "----\n",
-      "4\n",
-      "11\n",
-      "----\n",
-      "4\n",
-      "12\n",
-      "----\n",
-      "4\n",
-      "13\n",
-      "----\n",
-      "4\n",
-      "12\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "11\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "14\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "3\n",
-      "18\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "3\n",
-      "14\n",
-      "----\n",
-      "3\n",
-      "14\n",
-      "----\n",
-      "3\n",
-      "14\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "12\n",
-      "----\n",
-      "3\n",
-      "12\n",
-      "----\n",
-      "3\n",
-      "12\n",
-      "----\n",
-      "3\n",
-      "11\n",
-      "----\n",
-      "3\n",
-      "12\n",
-      "----\n",
-      "3\n",
-      "14\n",
-      "----\n",
-      "3\n",
-      "15\n",
-      "----\n",
-      "3\n",
-      "15\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "3\n",
-      "15\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "3\n",
-      "17\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "12\n",
-      "----\n",
-      "3\n",
-      "10\n",
-      "----\n",
-      "3\n",
-      "10\n",
-      "----\n",
-      "3\n",
-      "11\n",
-      "----\n",
-      "3\n",
-      "9\n",
-      "----\n",
-      "3\n",
-      "9\n",
-      "----\n",
-      "3\n",
-      "8\n",
-      "----\n",
-      "3\n",
+      "39\n",
       "7\n",
       "----\n",
-      "3\n",
-      "7\n",
-      "----\n",
-      "3\n",
-      "7\n",
-      "----\n",
-      "3\n",
-      "9\n",
-      "----\n",
-      "3\n",
-      "10\n",
-      "----\n",
-      "3\n",
-      "9\n",
-      "----\n",
-      "3\n",
-      "10\n",
-      "----\n",
-      "3\n",
-      "9\n",
-      "----\n",
-      "3\n",
-      "11\n",
-      "----\n",
-      "3\n",
-      "9\n",
-      "----\n",
-      "3\n",
-      "11\n",
-      "----\n",
-      "3\n",
-      "12\n",
-      "----\n",
-      "3\n",
-      "8\n",
-      "----\n",
-      "3\n",
-      "8\n",
-      "----\n",
-      "3\n",
-      "10\n",
-      "----\n",
-      "3\n",
-      "11\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "14\n",
-      "----\n",
-      "3\n",
-      "13\n",
-      "----\n",
-      "3\n",
-      "15\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "3\n",
-      "16\n",
-      "----\n",
-      "2\n",
-      "16\n",
-      "----\n",
-      "2\n",
-      "17\n",
-      "----\n",
-      "2\n",
-      "17\n",
-      "----\n",
-      "1\n",
-      "15\n",
-      "----\n",
-      "1\n",
-      "13\n",
-      "----\n",
-      "1\n",
-      "12\n",
-      "----\n",
-      "1\n",
-      "13\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "10\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "10\n",
-      "----\n",
-      "0\n",
-      "10\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "10\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "13\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "13\n",
-      "----\n",
-      "0\n",
-      "15\n",
-      "----\n",
-      "0\n",
-      "14\n",
-      "----\n",
-      "0\n",
-      "16\n",
-      "----\n",
-      "0\n",
-      "16\n",
-      "----\n",
-      "0\n",
-      "15\n",
-      "----\n",
-      "0\n",
-      "17\n",
-      "----\n",
-      "0\n",
-      "16\n",
-      "----\n",
-      "0\n",
-      "17\n",
-      "----\n",
-      "0\n",
-      "18\n",
-      "----\n",
-      "0\n",
-      "15\n",
-      "----\n",
-      "0\n",
-      "14\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "10\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "10\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "10\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "13\n",
-      "----\n",
-      "0\n",
-      "13\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "13\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "12\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "11\n",
-      "----\n",
-      "0\n",
-      "8\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "9\n",
-      "----\n",
-      "0\n",
-      "8\n",
-      "----\n",
-      "0\n",
-      "8\n",
-      "----\n",
-      "0\n",
+      "38\n",
       "6\n",
       "----\n",
-      "0\n",
-      "7\n",
-      "----\n",
-      "0\n",
-      "8\n",
-      "----\n",
-      "0\n",
-      "7\n",
-      "----\n",
-      "0\n",
-      "5\n",
-      "----\n",
-      "0\n",
+      "38\n",
       "6\n",
       "----\n",
-      "0\n",
+      "37\n",
       "8\n",
       "----\n",
-      "0\n",
-      "7\n",
-      "----\n",
-      "0\n",
-      "7\n",
-      "----\n",
-      "0\n",
+      "37\n",
       "9\n",
       "----\n",
-      "0\n",
+      "37\n",
+      "8\n",
+      "----\n",
+      "35\n",
+      "7\n",
+      "----\n",
+      "35\n",
+      "6\n",
+      "----\n",
+      "34\n",
+      "8\n",
+      "----\n",
+      "32\n",
+      "9\n",
+      "----\n",
+      "31\n",
+      "9\n",
+      "----\n",
+      "31\n",
       "10\n",
       "----\n",
-      "0\n",
+      "31\n",
+      "12\n",
+      "----\n",
+      "30\n",
+      "12\n",
+      "----\n",
+      "29\n",
+      "11\n",
+      "----\n",
+      "29\n",
+      "11\n",
+      "----\n",
+      "27\n",
+      "12\n",
+      "----\n",
+      "27\n",
+      "14\n",
+      "----\n",
+      "26\n",
+      "15\n",
+      "----\n",
+      "26\n",
+      "16\n",
+      "----\n",
+      "25\n",
+      "16\n",
+      "----\n",
+      "23\n",
+      "17\n",
+      "----\n",
+      "23\n",
+      "17\n",
+      "----\n",
+      "23\n",
+      "16\n",
+      "----\n",
+      "23\n",
+      "17\n",
+      "----\n",
+      "22\n",
+      "15\n",
+      "----\n",
+      "22\n",
+      "13\n",
+      "----\n",
+      "22\n",
+      "15\n",
+      "----\n",
+      "20\n",
+      "14\n",
+      "----\n",
+      "20\n",
+      "14\n",
+      "----\n",
+      "19\n",
+      "15\n",
+      "----\n",
+      "18\n",
+      "12\n",
+      "----\n",
+      "18\n",
+      "11\n",
+      "----\n",
+      "17\n",
+      "12\n",
+      "----\n",
+      "17\n",
+      "10\n",
+      "----\n",
+      "17\n",
+      "9\n",
+      "----\n",
+      "17\n",
+      "9\n",
+      "----\n",
+      "17\n",
+      "11\n",
+      "----\n",
+      "17\n",
+      "12\n",
+      "----\n",
+      "16\n",
+      "13\n",
+      "----\n",
+      "15\n",
+      "15\n",
+      "----\n",
+      "15\n",
+      "14\n",
+      "----\n",
+      "14\n",
+      "16\n",
+      "----\n",
+      "14\n",
+      "17\n",
+      "----\n",
+      "14\n",
+      "16\n",
+      "----\n",
+      "14\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "11\n",
+      "----\n",
+      "13\n",
+      "9\n",
+      "----\n",
+      "13\n",
+      "10\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "21\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "11\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "11\n",
+      "----\n",
+      "13\n",
+      "10\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "11\n",
+      "----\n",
+      "13\n",
+      "10\n",
+      "----\n",
+      "13\n",
+      "11\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "20\n",
+      "----\n",
+      "13\n",
+      "20\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "19\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "17\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "18\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "14\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "16\n",
+      "----\n",
+      "13\n",
+      "15\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "13\n",
+      "----\n",
+      "13\n",
+      "12\n",
+      "----\n",
+      "13\n",
       "10\n",
       "----\n"
      ]
@@ -1110,6 +1110,10 @@
     "        food.append({'cord': np.array([x, y, z]), 'count': 0, 'r': r, 'type': True})\n",
     "    return food\n",
     "\n",
+    "def generate_food_grid(n_layers, min_bound, max_bound):\n",
+    "    food = []\n",
+    "    for i in range(n):\n",
+    "\n",
     "def generate_cycles(nodes, food, cycles, p_neg, p_pos, p_neu, b_pos, b_neg, b_neu):\n",
     "    final_csv = ''\n",
     "    final_food_csv = ''\n",
@@ -1162,7 +1166,7 @@
     "b_neg = 1\n",
     "b_neu = 1\n",
     "nodes = init_points(5,1)\n",
-    "food = init_food(20, -20, 20, 10)\n",
+    "food = init_food(40, -20, 20, 10)\n",
     "generate_cycles(nodes, food, cycles, p_neg, p_pos, p_neu, b_pos, b_neg, b_neu)"
    ]
   },
