--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1298,6 +1298,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intersection at [ 0. -5.  5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import print_function\n",
+    "import numpy as np\n",
+    "\n",
+    "def LinePlaneCollision(planeNormal, planePoint, rayDirection, rayPoint, epsilon=1e-6):\n",
+    "\n",
+    "    ndotu = planeNormal.dot(rayDirection)\n",
+    "    if abs(ndotu) < epsilon:\n",
+    "        raise RuntimeError(\"no intersection or line is within plane\")\n",
+    "\n",
+    "    w = rayPoint - planePoint\n",
+    "    si = -planeNormal.dot(w) / ndotu\n",
+    "    Psi = w + si * rayDirection + planePoint\n",
+    "    return Psi\n",
+    "\n",
+    "\n",
+    "#Define plane\n",
+    "planeNormal = np.array([0, 0, 1])\n",
+    "planePoint = np.array([0, 0, 5]) #Any point on the plane\n",
+    "\n",
+    "#Define ray\n",
+    "rayDirection = np.array([0, -1, -1])\n",
+    "rayPoint = np.array([0, 0, 10]) #Any point along the ray\n",
+    "\n",
+    "Psi = LinePlaneCollision(planeNormal, planePoint, rayDirection, rayPoint)\n",
+    "print(\"intersection at\", Psi)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
